@@ -1,4 +1,4 @@
-          INSTALL of  APRX v0.12
+          INSTALL of  APRX v0.13
 
 A rough-cut version of the installation instructions
 
