@@ -1,5 +1,5 @@
 
-		APRX    v0.12
+		APRX    v0.13
 
 A receive-only APRS-IS "i-gate" with following properties:
 
