@@ -1,4 +1,4 @@
-.TH aprx\-stat 8 "aprx-0.13 - 2008 January 04"
+.TH aprx\-stat 8 "@DATEVERSION@"
 .LO 8
 .SH NAME
 .B aprx\-stat
